2000-04-19  Seth Alves  <alves@hungry.com>

	* gui/eventedit.c (ee_rp_init_rule): changed the order around
	a bit to avoid a Gtk-CRITICAL crash

	* gui/gncal-todo.c (gncal_todo_update): fixed code to populate
	the todo clist

	* cal-client/cal-client.c (cal_client_get_uids): don't check
	type again CALOBJ_TYPE_ANY since it will always match.
	(cal_client_get_uids): same (re: CALOBJ_TYPE_ANY)

	* pcs/cal-backend.c (build_uids_list): same (re: CALOBJ_TYPE_ANY)

	* pcs/cal.c (Cal_get_uids): same (re: CALOBJ_TYPE_ANY)

	* pcs/cal-backend.c (remove_object): don't call save from here
	because in all cases the caller of remove_object calls save

	* gui/calendar-commands.c (calendar_set_uri): calls gnome_calendar_open
	instead of checking on disk and calling load or create.

	* gui/gnome-cal.c (gnome_calendar_object_changed): fixed to use
	cal_client_update_object -- editing and dragging events works again
	(gnome_calendar_open): collapsed gnome_calendar_load and
	gnome_calendar_create into this function.  added new type
	GnomeCalendarOpenMode which has the value CALENDAR_OPEN or
	CALENDAR_OPEN_OR_CREATE.

	* gui/evolution-calendar-control.c (calendar_properties_init): create
	a property bag for this control
	(set_prop): callback for property sets
	(get_prop): callback for proprety gets

	* gui/calendar-commands.c (calendar_set_uri): new function,
	called when the "calendar_uri" property is set on the calendar-
	control's property bag.

2000-04-18  Federico Mena Quintero  <federico@helixcode.com>

	* cal-util/Makefile.am (INCLUDES): Fix include path.

2000-04-16  Federico Mena Quintero  <federico@helixcode.com>

	* pcs/cal-factory.h (CalFactoryClass): We have a new
	"last_calendar_gone" signal that Wombat can use to terminate
	itself properly.

	* pcs/cal-factory.c (cal_factory_class_init): Register the
	"last_calendar_gone" signal.
	(backend_destroy_cb): Emit the "last_calendar_gone" signal instead
	of killing the factory.
